Fix z-index in footer

--- a/css/footer.css
+++ b/css/footer.css
@@ -2,7 +2,8 @@
     background-color:var(--secondary-background-color);
     position:sticky;
     bottom:0;
-    width:100%
+    width:100%;
+    z-index:1;
 }
 
 nav{
